--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -82,7 +82,7 @@
                                     <action selector="onCircleButtonClicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="emN-oz-3CN"/>
                                 </connections>
                             </button>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bfC-vw-uoE">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bfC-vw-uoE">
                                 <rect key="frame" x="78" y="405" width="147" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </slider>
