--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -69,7 +69,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
-                                    <action selector="onPlayButtonclicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="Kec-5I-kzM"/>
+                                    <action selector="onPlayOrPauseButtonclicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="FFZ-Rp-ri8"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TVS-2E-ZJm">
