--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -39,11 +39,11 @@
                                 </state>
                                 <connections>
                                     <action selector="onPlayListButtonClicked:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="FfU-xG-S1A"/>
-                                    <segue destination="P9v-9r-oQO" kind="modal" id="3V3-NX-s71"/>
+                                    <segue destination="P9v-9r-oQO" kind="modal" identifier="FirstViewControllerToPlayListViewController" id="WdG-WH-gXA"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mkj-Ig-Yeb">
-                                <rect key="frame" x="170" y="446" width="32" height="30"/>
+                                <rect key="frame" x="181" y="446" width="32" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Next">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -63,7 +63,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yxs-Vn-QWo">
-                                <rect key="frame" x="127" y="446" width="30" height="30"/>
+                                <rect key="frame" x="127" y="446" width="46" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Play">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
@@ -115,7 +115,7 @@
         <!--Play List View Controller - 播放列表-->
         <scene sceneID="fUK-ev-YZg">
             <objects>
-                <viewController title="播放列表" id="P9v-9r-oQO" customClass="PlayListViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PlayListViewController" title="播放列表" id="P9v-9r-oQO" customClass="PlayListViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="ncS-z9-fRa"/>
                         <viewControllerLayoutGuide type="bottom" id="8OE-VB-6Gi"/>
@@ -180,6 +180,7 @@
                     </view>
                     <connections>
                         <outlet property="playListTableView" destination="Gwh-lJ-Naw" id="icI-Py-Cpu"/>
+                        <outlet property="songTableVIew" destination="Gwh-lJ-Naw" id="Y0g-Kr-B30"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MGW-MC-vTh" userLabel="First Responder" sceneMemberID="firstResponder"/>
