--- a/Buddha/Base.lproj/Main_iPhone.storyboard
+++ b/Buddha/Base.lproj/Main_iPhone.storyboard
@@ -85,6 +85,9 @@
                             <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="bfC-vw-uoE">
                                 <rect key="frame" x="78" y="405" width="147" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="onSliderTouchUpInside:" destination="CZ4-MO-1fc" eventType="touchUpInside" id="nit-w6-tXs"/>
+                                </connections>
                             </slider>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
